--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "^16.0.8",
-    "nextra": "^3.3.1",
-    "nextra-theme-docs": "^3.3.1",
+    "next": "15.3.3",
+    "nextra": "3.3.1",
+    "nextra-theme-docs": "3.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swagger-ui-react": "^5.18.2",
@@ -34,7 +34,7 @@
     "@types/react-dom": "^19",
     "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^9",
-    "eslint-config-next": "^16.0.8",
+    "eslint-config-next": "15.3.3",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
